[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nemea-pycommon"
version = "1.7.0"
description = "Common Python modules and methods of the NEMEA system."
readme = {text = "The module contains methods for creation and submission of incident reports in IDEA format.", content-type = "text/plain"}
license = {text = "BSD"}
authors = [
    {name = "Vaclav Bartos, CESNET", email = "bartos@cesnet.cz"},
]
maintainers = [
    {name = "Tomas Cejka", email = "cejkat@cesnet.cz"},
]
requires-python = ">=3.6"
dependencies = [
    "pynspect",
    "idea-format",
    "PyYAML",
    "ply",
    "jinja2",
    "redis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking :: Monitoring",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]



[project.urls]
Homepage = "https://github.com/CESNET/Nemea-Framework"

[tool.setuptools]
py-modules = ["report2idea", "ip_prefix_search"]
packages = ["reporter_config", "reporter_config.actions"]


[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_unittest.py","rc_*.py"]
addopts = ""