bin_PROGRAMS=b_plus_tree_test prefix_tree_test

b_plus_tree_test_SOURCES=b_plus_tree_test.c
b_plus_tree_test_CFLAGS=-O2 -lrt 
b_plus_tree_test_LDFLAGS=-static ../libnemea-common.la
b_plus_tree_test_CPPFLAGS=-I../b_plus_tree -I../include


prefix_tree_test_SOURCES=prefix_tree_test.c
prefix_tree_test_CFLAGS=-O2 -lrt
prefix_tree_test_LDFLAGS=-static ../libnemea-common.la
prefix_tree_test_CPPFLAGS=-I../prefix_tree -I../include