AM_LDFLAGS=-static ../libnemea-common.la
LDADD=-lrt

check_PROGRAMS=b_plus_tree_test counting_sort_test prefix_tree_test prefix_tree_test ip_prefix_search_test

TESTS=b_plus_tree_test counting_sort_test prefix_tree_test ip_prefix_search_test

b_plus_tree_test_SOURCES=b_plus_tree_test.c

counting_sort_test_SOURCES=counting_sort_test.c

prefix_tree_test_SOURCES=prefix_tree_test.c

ip_prefix_search_test_SOURCES=ip_prefix_search_test.c
